# Chess

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: bishop.cpp.B54DDAB355348F6B.idx  bishop.hpp.DD72B667A19A006A.idx  chessboard.cpp.E2EE272DB424B695.idx  chessboard.hpp.197FCA4D079EC65F.idx  color.hpp.5F6D99577FCBCA70.idx  king.cpp.A9A228BFD609DA50.idx  king.hpp.6E6F7CF5F521B5BE.idx  knight.cpp.857E5B06648A26EC.idx  knight.hpp.BBC75078E3CBE739.idx  main.cpp.9314F235A8142487.idx  pawn.cpp.B04D77E1081468DD.idx  pawn.hpp.1EF72350FC417F72.idx  piece.cpp.5F16DECF222F50EF.idx  piece.hpp.581496990025E2F0.idx  position.cpp.9D5F7271265863C0.idx  position.hpp.87A8922057511C5A.idx  queen.cpp.2515DEC53C065684.idx  queen.hpp.B87C5EAEC03AA894.idx  rook.cpp.DD63740937A5CD9A.idx  rook.hpp.4337A2D533F13411.idx
glad-2/include/glad/: glad.h
glad-2/src/: glad.c
header/: chessboard.hpp  piece.hpp  position.hpp
header/pieces/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  queen.hpp  rook.hpp
include/: Giocatore.h  Gioco.h  Pezzo.h  resource_manager.h  scacchiera.h  shader.h  sprite_renderer.h  texture.h
include/Pezzi/: Alfiere.h  Cavallo.h  Pedone.h  Pzz.h  Re.h  Regina.h  Torre.h
src/: Giocatore.cpp  Gioco.cpp  Pezzo.cpp  chessboard.cpp  main.cpp  piece.cpp  position.cpp  resource_manager.cpp  scacchiera.cpp  scacchiera.fs  scacchiera.vs  shader.cpp  sprite_renderer.cpp  texture.cpp
src/Pezzi/: Alfiere.cpp  Cavallo.cpp  Pedone.cpp  Re.cpp  Regina.cpp  Torre.cpp
src/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
